[package]
name = "siot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std + native-tls
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "time" ] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
dotenv = "0.15.0"

# Required for wellknown types
prost-types = "0.11"
dashmap = "5.4.0"
chrono = "0.4.22"

tonic = "0.8"
tonic-web = "0.4.0"
prost = "0.11"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3.24"
async-trait = "0.1.57"

[build-dependencies]
tonic-build = "0.8"